--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,57 @@
 # Compiled class file
-*.class
+*.class/
 
 # Log file
-*.log
+*.log/
 
 # BlueJ files
-*.ctxt
+*.ctxt/
 
 # Mobile Tools for Java (J2ME)
-.mtj.tmp/
+.mtj/
+.tmp/
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+# virtual machine
 hs_err_pid*
-replay_pid*
+
+# Eclipse
+.project/
+.classpath/
+.settings/
+bin/
+
+# IntelliJ
+.idea
+*.ipr
+*.iml
+*.iws
+
+# NetBeans
+nb-configuration.xml
+
+# Visual Studio Code
+.vscode/
+
+# OSX
+.DS_Store/
+
+# Vim
+*.swp
+*.swo
+
+# patch
+*.orig
+*.rej
+
+# Maven
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+release.properties
+
+lsp/
+
+.java-version/
+
+*.sts4-cache/
