alteração e criacao do cadastro
alteração e criacao do cadastro

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	<packaging>jar</packaging>
 
 	<name>spring-cliente-angularjs-app</name>
-	<description>Spring Boot com AngularJS</description>
+	<description>Crud Spring Boot com AngularJS</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
